      files
    * Removing files doesn't readd them any longer simply because they were in
      the previous version and are present in the lookaside anymore (CNY-601)
    * Conary now warns in the presence of unknown use flags in the buildFlavor
      instead of erroring.  (It will still error if the unknown use flag
      is accessed in the recipe).

  o Bugfixes:
    * Files added in both the repository and locally with cvc now give an
      error message on update rather than corrupting the CONARY file (CNY-1024)

Changes in 1.0.37:
  o Bugfixes:
    * A warning message produced when attempting to retrieve a OpenPGP
      key has been fixed.  The warning was introduced in CNY-589.

Changes in 1.0.36:
  o Client Changes:
    * The usage message displayed when running "conary" or "cvc" has
      been simplified and improved. (CNY-560)
    * When choosing how to match up troves with the same name, conary now
      takes paths into account, if there's a choice to make between matching
      up two old troves that are otherwise equivalent with a new trove, conary
      will choose the one that shares paths with the new trove. (CNY-819)
    * Conary will now allow "conary migrate --info" and "conary migrate
      --interactive" without displaying usage information. (CNY-985)
    * Conary now only warns about being able to execute gpg if a
      signature trust threshold has been set. (CNY-589)
    * Fixed cvcdesc after the refactoring of configuration options. (CNY-984)

  o Server Changes:
    * PostgreSQL support has been finalized and some SQL queries have
      been updated in the repository code for PostgreSQL
      compatibility.  PostgreSQL will be officially supported in a
      future release of Conary.
    * The repository browser is now viewable by Internet Explorer.

  o Build Changes:
    * cvc now allows files to be switched from autosource to normal
      and from normal to autosourced. (CNY-946)